--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
 	<title>Shubhra Prakash</title>
 	<link rel="icon" href="/favicon.904695fe.ico" type="image/x-icon">
@@ -7,85 +8,90 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 	<!-- styles only for upcoming part on the left sidebar -->
-<style>.sidebar {
-		width: 25%;
-	}
-	.fontwalaplay .title {
-		color: #000000;
-    	background: yellow;
-		text-align: center;
-		letter-spacing: .2em;
-		text-transform: uppercase;
-		line-height: 1.25em;
-		margin: 0.5em 0 0 !important;
-		font-size: 2em;
-		font-weight: bold;
-	}
+	<style>
+		.sidebar {
+			width: 25%;
+		}
 
-	.fontwalaplay .title span {
-		font-size: .5em;
-		letter-spacing: normal;
-	}
+		.fontwalaplay .title {
+			color: #000000;
+			background: yellow;
+			text-align: center;
+			letter-spacing: .2em;
+			text-transform: uppercase;
+			line-height: 1.25em;
+			margin: 0.5em 0 0 !important;
+			font-size: 2em;
+			font-weight: bold;
+		}
 
-	.fontwalaplay img {
-		max-width: 100%;
-	}
+		.fontwalaplay .title span {
+			font-size: .5em;
+			letter-spacing: normal;
+		}
 
-	.fontwalaplay a {
-		text-decoration: none;
-		color: black;
-	}
+		.fontwalaplay img {
+			max-width: 100%;
+		}
 
-	.tag {
-		margin: 0 0 0.5em 0!important;
-		padding: 0;
-		line-height: 1.25em;
-		font-size: .75em;
-		text-transform: uppercase;
-		text-align: center;
-		background-color: #ffffff26;
-		color: white;
-	}
+		.fontwalaplay a {
+			text-decoration: none;
+			color: black;
+		}
 
-	.artby {
-		text-align: center !important;
-		color: #f1d5cbad !important;
-		letter-spacing: .05em;
-		margin: 0;
-	}
-	.buy {
-		font-size: 2em !important;
-		text-decoration: none;
-		background-color: yellow;
-		padding: 0 1em;
-		border: 2px solid yellow;
-		color: black !important;
-		font-weight: bold;
-	}
+		.tag {
+			margin: 0 0 0.5em 0 !important;
+			padding: 0;
+			line-height: 1.25em;
+			font-size: .75em;
+			text-transform: uppercase;
+			text-align: center;
+			background-color: #ffffff26;
+			color: white;
+		}
 
-	.buy a { 
-		text-decoration: none;
-		display: inline-block;
-		font-size: 32px;
-		background-color: yellow;
-		color: black;
-		font-weight: bold;
-	}</style>
-<link rel="stylesheet" href="app.c328ef1a.css"></head>
+		.artby {
+			text-align: center !important;
+			color: #f1d5cbad !important;
+			letter-spacing: .05em;
+			margin: 0;
+		}
+
+		.buy {
+			font-size: 1.25em !important;
+			text-decoration: none;
+			background-color: red;
+			padding: 0 1em;
+			border: 2px solid red;
+			color: white !important;
+			font-weight: bold;
+		}
+
+		.buy a {
+			text-decoration: none;
+			display: inline-block;
+			font-size: 32px;
+			background-color: red;
+			color: white;
+			font-weight: bold;
+		}
+	</style>
+	<link rel="stylesheet" href="app.c328ef1a.css">
+</head>
+
 <body>
-		<div class="project-container sidebar">
-			<div class="fontwalaplay">
-				<div>
-					<div class="title">UPCOMING OCT 2022<br><span>PERFORMANCE IN NEW YORK CITY</span></div>
-					<a href="http://tinyurl.com/fontwalaNYC">
-						<img src="http://shubhra.site/portfolio/images/fontwala/play/fontwala-poster.png">
-						<div class="tag">a solo theatre play</div>
-						<p class="artby buy">BUY TICKETS</p>	
-					</a>
-				</div>
+	<div class="project-container sidebar">
+		<div class="fontwalaplay">
+			<div>
+				<a href="https://theaterlabnyc.com/fontwala-july-28-30-2023/">
+					<img src="https://shubhra.site/portfolio/images/fontwala/play/website-fontwala-july2023.jpg">
+					<p class="artby buy">BUY TICKETS</p>
+				</a>
 			</div>
 		</div>
+	</div>
 	<div id="app"></div>
- 	<script src="app.c328ef1a.js"></script>
+	<script src="app.c328ef1a.js"></script>
 </body>
+
 </html>
