teachers college event update

--- a/index.html
+++ b/index.html
@@ -80,14 +80,19 @@
 </head>
 
 <body>
-	<div class="project-container sidebar">
-		<div class="fontwalaplay">
-			<div>
-				<a href="https://themarsh.org/shows_and_events/marshstream/marsh-risings-shubhra-prakash/">
-					<img src="https://shubhra.site/portfolio/images/fontwala/play/website-fontwala-SF.png">
-					<p class="artby buy">BUY TICKETS</p>
-				</a>
-			</div>
+	<div id="home-flash">
+		<div id="tc-event">
+			<button onclick="this.parentNode.style.display='none';">X</button>
+			<h2>UPCOMING : MARCH 2024</h2>
+			<p><a href="https://engage.tc.columbia.edu/events/79796">FONTWALA, solo play
+					performance at Teachers College, Columbia University.<br />
+					Hosted by
+					South Asians at
+					Teachers College <br /> in collaboration with Society of International Education</a></p>
+			<a href="https://engage.tc.columbia.edu/events/79796">
+				<img src="assets/fake/tc-event-2024.png">
+				<p class="artby buy">REGISTER FOR EVENT</p>
+			</a>
 		</div>
 	</div>
 	<div id="app"></div>
